@@ -2,6 +2,7 @@
 	- Merge PR #671 from Petr Menšík: Disable ED25519 and ED448 in FIPS
 	  mode on openssl3.
 	- Merge PR #660 from Petr Menšík: Sha1 runtime insecure.
+	- For #660: formatting, less verbose logging, add EDE information.
 
 1 July 2022: George
 	- Merge PR #706: NXNS fallback.
